# nex

./: CMakeLists.txt  vcpkg.json
core/: CMakeLists.txt
core/include/nex/: buffer.hpp  camera.hpp  core.hpp  embed.hpp  embed_shader.hpp  error.hpp  gfx.hpp  gfx_texture.hpp  glfw_env.hpp  hlsl.hpp  im3d.hpp  imgui.hpp  log.hpp  mip_generator.hpp  sprite.hpp  texture.hpp  transform.hpp  vertex_format.hpp
core/include/nex/loaders/: png.hpp
core/shaders/: common.hlsl  im3d.hlsl  sprite.hlsl
core/src/: camera.cpp  core.cpp  embed.cpp  embed_shader.cpp  error.cpp  gfx.cpp  gfx_texture.cpp  glfw_env.cpp  im3d.cpp  imgui.cpp  imgui_glfw.cpp  log.cpp  sprite.cpp  texture.cpp  vertex_format.cpp
core/src/loaders/: lodepng.cpp  png.cpp
test/GfxHelloWorld/: CMakeLists.txt  main.cpp
test/HelloWorld/: CMakeLists.txt  main.cpp
test/Im3d/: CMakeLists.txt  main.cpp
test/ImGui/: CMakeLists.txt  main.cpp
test/SpriteBatch/: CMakeLists.txt  main.cpp
tools/embed/: embedfile.cpp
